<resources>
    <string name="app_name">arqControl</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Arq Control</string>
    <string name="nav_header_subtitle">Cuaderno de obra</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Principal</string>
    <string name="menu_gallery">Listado de Obras</string>
    <string name="menu_obras_finales">Obras Finalizadas</string>
    <string name="menu_operadores">Listado Operadores</string>
    <string name="menu_visita">Nueva Visita Obra</string>
    <string name="menu_salir">Salir Aplicación</string>

    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="registro">Registro</string>
    <string name="v1_0">v1.0</string>
    <string name="todo">logo00</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenido !!!"</string>
    <string name="invalid_username">Usuario No valido</string>
    <string name="invalid_password">Contraseña debe ser >5 caracteres</string>
    <string name="login_failed">"Login failed"</string>

    <string name="fragment_home">Fragment Home</string>
    <string name="Logo">Logo</string>
    <string name="Add">Add</string>
    <string name="obra_en_curso">Obras en Curso</string>
    <string name="en_curso">Obras</string>
    <string name="obra_nueva">Obra Nueva</string>
    <string name="visita_nueva">Nueva Visita</string>
    <string name="obras_finalizadas">Obras Finalizadas</string>
    <string name="operadores">Agenda</string>
    <string name="finalizadas">Finalizadas</string>
    <string name="agenda_operadores">Agenda Operadores</string>

    <string name="compartir">Compartir</string>
    <string name="salir">SALIR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_visita">Visitas de Obra</string>

    <string name="large_text">
        "Visita de obraDB a fecha:   /   /\n\n"
    </string>
    <string name="nueva_visita">Nueva Visita</string>
    <string name="Cuestion_Salir">¿Realmente desea salir de la aplicación?</string>
    <string name="BotonSalir">Salir</string>
    <string name="BotonRegresar">Regresar</string>
    <string name="comunicaciones">Comunicaciones</string>
    <string name="camara">Camara</string>
    <string name="menu_obras">Listado Obras</string>
    <string name="first_fragment_label">first_fragment:label</string>
    <string name="second_fragment_label">second_fragment_label</string>
    <string name="title_activity_obras2">Obra Nueva</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="n_visitas">Visitas</string>
    <string name="referencia">Referencia:</string>
    <string name="titulo_obra">Titulo Obra:</string>
    <string name="string_promotor">Promotor:</string>
    <string name="tipo_de_obra">Tipo de Obra:</string>
    <string name="iconovisitas">IconoVisitas</string>
    <string name="botoneditar">BotonEditar</string>
    <string name="direccion">Dirección:</string>
    <string name="telefono">Teléfono:</string>
    <string name="titulo">Título:</string>
    <string name="visitas_previstas">Visitas previstas:</string>

    <string name="menu_politica">Politica de Privacidad</string>
    <string name="Politica">Política de privacidad</string>
    <string name="manual_de_uso">Manual de Uso</string>
    <string name="menu_manual_uso">Manual de Uso</string>
    <string name="title_activity_informa_obra">ScrollingActivity</string>
    <string name="informe_Obra">Informe de Obra</string>
    <string name="fecha_de_inicio">Fecha de Inicio:</string>
    <string name="fecha_final">Fecha Final:</string>
    <string name="eliminarobra">Eliminar Obra</string>
    <string name="texto_formulario"><big><b>E</b></big>n esta pantalla se introducen los datos
        iniciales de la obra. Tenga en cuenta que debe introducir como mínimo:</string>
    <string name="texto_formulario1"><b>N</b>ombre del <b>promotor</b>, el <b>título</b>, su propia
        <b>referencia</b> y la <b>fecha de inicio</b> de la obra. </string>
    <string name="texto_formulario_visita"><big><b>E</b></big>n este formulario se introducen los
        datos recabados en la <b>visita de obra</b>. Tenga en cuenta que debe introducir como mínimo:
    </string>
    <string name="texto_formulario2"><b>Motivo</b>, y <b>fecha</b> de la <b>visita</b>. </string>
    <string name="datos_obra">Datos de la Obra</string>
    <string name="imagen_form_obra">imagen_form_obra</string>
    <string name="app_bar_obra">app_bar_obra</string>
    <string name="fecha">Fecha: </string>

    <string name="botoneditarvisita">botonEditarVisita</string>
    <string name="motivo_de_la_visita">Motivo: </string>
    <string name="descripcion">Descripción:</string>
    <string name="visitas">Visitas</string>
    <string name="titulo_visita">Título visita:</string>
    <string name="eliminarvisita">Eliminar Visita</string>
    <string name="fab1">FAB1</string>
    <string name="fab2">Fab2</string>
    <string name="cancelar">Cancelar</string>
    <string name="buscar_fotografia">Buscar Fotografía</string>
    <string name="hacer_fotografia">Hacer Fotografía</string>
    <string name="numero">Nº</string>
    <string name="path">Almacen Fotografía:</string>

</resources>