<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_visita"
            android:icon="@drawable/ic_menu_build"
            android:title="@string/menu_visita" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery_bookmark_add"
            android:title="@string/obra_en_curso" />
        <item
            android:id="@+id/nav_finalizadas"
            android:icon="@drawable/ic_menu_gallery_bookmark"
            android:title="@string/obras_finalizadas" />
        <item
            android:id="@+id/nav_operadores"
            android:icon="@drawable/ic_menu_bookmarks"
            android:title="@string/menu_operadores" />
    </group>
    <group android:id="@string/comunicaciones" >
            <item
                android:id="@+id/nav_politica"
                android:icon="@drawable/ic_menu_layers_24"
                android:title="@string/Politica" />
            <item
                android:id="@+id/nav_ayuda"
                android:icon="@drawable/ic_menu_bookmark_24"
                android:title="@string/manual_de_uso" />
            <item
                android:id="@+id/nav_compartir"
                android:icon="@drawable/ic_menu_share_24"
                android:title="@string/compartir" />
    </group>
    <group android:id="@+id/salir">
            <item
                android:id="@+id/nav_salir"
                android:icon="@drawable/ic_menu_exit_to_app_24"
                android:title="@string/salir" />
    </group>
</menu>