<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.arq_control.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_obras"
        android:name="com.arq_control.ui.gallery.ObraFragment"
        android:label="@string/menu_obras"
        tools:layout="@layout/fragment_obra" />

    <fragment
        android:id="@+id/nav_finalizadas"
        android:name="com.arq_control.ui.finalizadas.FinalizadasFragment"
        android:label="@string/menu_obras_finales"
        tools:layout="@layout/fragment_finalizadas" />

    <fragment
        android:id="@+id/nav_operadores"
        android:name="com.arq_control.ui.operadores.OperadoresFragment"
        android:label="@string/menu_operadores"
        tools:layout="@layout/fragment_operadores" />

    <fragment
        android:id="@+id/nav_politica"
        android:name="com.arq_control.ui.varios.PoliticsFragment"
        android:label="@string/menu_politica"
        tools:layout="@layout/fragment_politics" />

    <fragment
        android:id="@+id/nav_manual_uso"
        android:name="com.arq_control.ui.varios.ManualUsoFragment"
        android:label="@string/menu_manual_uso"
        tools:layout="@layout/fragment_manual_uso" />
    <fragment
        android:id="@+id/nav_salir"
        android:name="com.arq_control.ui.salir.SalirFragment"
        android:label="@string/menu_salir"
        tools:layout="@layout/fragment_salir" />

</navigation>