<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.VisitasActivity">

        <TextView
            android:id="@+id/texto_formulario1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/texto_formulario_visita"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/texto_formulario2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:paddingBottom="4dp"
            android:text="@string/texto_formulario2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/texto_formulario1" />

        <EditText
            android:id="@+id/editTextTituloVisita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/motivo_de_la_visita"
            android:textStyle="bold"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/texto_formulario2" />

        <EditText
            android:id="@+id/editTextFecha"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:ems="10"
            android:textStyle="bold"
            android:hint="@string/fecha"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTituloVisita" />

        <EditText
            android:id="@+id/editTextNumeroVisita"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:autofillHints=""
            android:clickable="false"
            android:ems="10"
            android:hint="@string/numero"
            android:inputType="number"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/editTextFecha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextFecha" />

        <EditText
            android:id="@+id/editTextDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/descripcion"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextFecha" />

        <EditText
            android:id="@+id/editTextAlmacenFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:autofillHints=""
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:gravity="start|top"
            android:inputType=""
            android:text="@string/path"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDescripcion" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>