<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.InformeVisitaActivity">

        <Button
            android:id="@+id/buttonHacerPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:drawableTint="@color/purple_500"
            android:text="@string/hacer_fotografia"
            android:textAlignment="textStart"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            app:icon="@drawable/ic_baseline_add_a_photo_24"
            app:iconTint="@color/purple_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonBuscarPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:drawableTint="@color/purple_500"
            android:text="@string/buscar_fotografia"
            android:textAlignment="textStart"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            app:icon="@drawable/ic_menu_gallery"
            app:iconTint="@color/purple_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonHacerPhoto" />

        <Button
            android:id="@+id/buttonCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:insetLeft="32dp"
            android:text="@string/cancelar"
            android:textAlignment="textStart"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonBuscarPhoto" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>